cart form modify

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "styled-components": "^6.0.7"
   },
   "devDependencies": {
+    "@hookform/resolvers": "^3.2.0",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
